--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 env:
-  DEPLOY_PATH: /var/www/vue-app
+  DEPLOY_PATH: /var/www/app
   BUILD_SCRIPT: npm run build
   BUILD_SCRIPT_OUTPUT: dist
 
