--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on: [push]
 
 env:
   DEPLOY_PATH: /var/www/app
+  # В теории можно собрать не только Vue-приложение, так как принцип сборки мало где отличается
   BUILD_SCRIPT: npm run build
   BUILD_SCRIPT_OUTPUT: dist
 
@@ -11,15 +12,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      # Делаем checkout текущей ветки
       - uses: actions/checkout@v2
+      # Устанавливаем Node.JS для сборки приложения
       - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+      # Записываем в переменные окружения имя текущей ветки
+      # Чтобы избежать конфиликтов в URL, меняем точки на _, а слеши на минусы
       - name: Get branch name
         shell: bash
-        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g')"
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' | sed 's/\./_/g')"
+      # Устанавливаем зависимости для сборки
       - name: Install Dependencies
         run: npm i
+      # Собираем приложение
       - name: Build Appliction
         run: $BUILD_SCRIPT
+      # Доставляем собранное приложение на сервер
       - name: Deploy to Server
         uses: appleboy/scp-action@master
         with:
@@ -30,3 +40,5 @@ jobs:
           source: ${{ env.BUILD_SCRIPT_OUTPUT }}
           target: ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
           strip_components: 1
+      - name: Print Info
+        run: echo "Deployed at https://${REF}.app.example.ru/"
